--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -58,7 +58,7 @@
           %span.icon_parallel
             =t("ref.parallel")
 
-%article{"data-book" => @reference[:book].to_s, "data-book-api" => @reference[:book].sub(/[a-z]/) {|m| m.upcase}, "data-book-human" => @version.books[@reference[:book]].human, "data-chapter" => @reference[:chapter].to_s, "data-version" => @reference[:version].to_s}
+%article{"data-highlights" => @highlights, "data-book" => @reference[:book].to_s, "data-book-api" => @reference[:book].sub(/[a-z]/) {|m| m.upcase}, "data-book-human" => @version.books[@reference[:book]].human, "data-chapter" => @reference[:chapter].to_s, "data-version" => @reference[:version].to_s}
   = link_to(@reference.previous, bible_path(@reference.previous), class: "nav_prev") if @reference.previous
   = link_to(@reference.next, bible_path(@reference.next), class: "nav_next") if @reference.next
   #version_primary
