--- a/app/views/shared/_menu_bookmark.html.haml
+++ b/app/views/shared/_menu_bookmark.html.haml
@@ -32,18 +32,19 @@
   %dl.accordion
     %dt
       Highlight
-      %a.close{:href => '#'} Close
     %dd
-      %div{:class => "color_picker_list"}
-        %a{:class => "color_picker", :href =>"#"}
-        %a{:class => "color_picker_holder", :href =>"#"}
-        %a{:class => "color_picker_clear", :href =>"#"}
-          <span class='selected'></span>
-        %a{:class => "color", :id => "highlight_f3a9a9", :href => "#", :style => "background-color:#f3a9a9"}
-        %a{:class => "color", :id => "highlight_f6f0b4", :href => "#", :style => "background-color:#f6f0b4"}
-        %a{:class => "color", :id => "highlight_a8ed9d", :href => "#", :style => "background-color:#a8ed9d"}
-        %a{:class => "color", :id => "highlight_f3a9a9", :href => "#", :style => "background-color:#f3a9a9"}
-      %div{:class => "clear"}
+      %form{:action => highlights_path, method: "POST"}
+        %input{:class => "verses_selected_input", name: "highlight[reference]", type: "hidden"}
+        %div{:class => "color_picker_list"}
+          %a{:class => "color_picker", :href =>"#"}
+          %a{:class => "color_picker_holder", :href =>"#"}
+          %a{:class => "color_picker_clear", :href =>"#"}
+            <span class='selected'></span>
+          %button{:type => "submit", :name => "highlight[color]", :value => "f3a9a9", :class => "color", :id => "highlight_f3a9a9", :href => "#", :style => "background-color:#f3a9a9"}
+          %a{:class => "color", :id => "highlight_f6f0b4", :href => "#", :style => "background-color:#f6f0b4"}
+          %a{:class => "color", :id => "highlight_a8ed9d", :href => "#", :style => "background-color:#a8ed9d"}
+          %a{:class => "color", :id => "highlight_f3a9a9", :href => "#", :style => "background-color:#f3a9a9"}
+        %div{:class => "clear"}
     %dt
       Bookmark
     %dd
