--- a/app/views/plans/calendar.html.haml
+++ b/app/views/plans/calendar.html.haml
@@ -44,7 +44,7 @@
                   %td.inactive-day{class: cur_date == Date.today ? "today" : ""}= cur_date.day.to_s
               - else
                 - cur_status = statuses.delete_at(0)
-                %td{class: (cur_status.completed ? 'read' : !cur_status.references_completed.empty? ? 'inactive-day partial' : 'inactive-day') << ((cur_date == Date.today) ? ' today' : '')}
+                %td.active-day{class: (cur_status.completed ? 'read' : !cur_status.references_completed.empty? ? 'inactive-day partial' : 'inactive-day') << ((cur_date == Date.today) ? ' today' : '')}
                   = link_to(cur_date.day.to_s, plan_path(@subscription.slug, day: cur_status.day))
               - cur_date = cur_date.next
             - full_month = cur_date > last_date       # it's been a full month if the first day in the next week is after the last day of the current month
