full screen reader
Change-Id: I95768fbac49305f2b68f5dec17366ffff8b700b2

--- a/app/assets/sass/_form_elements.sass
+++ b/app/assets/sass/_form_elements.sass
@@ -225,6 +225,12 @@ input[type="week"]
   padding: 7px 10px
   height: 35px
 
+
+div.color_picker_list button.color
+  display: inline
+  margin-left: 0
+  margin-right: 4px
+
 textarea
   display: block
   height: auto
