--- a/app/views/shared/_widget_bookmarks.html.haml
+++ b/app/views/shared/_widget_bookmarks.html.haml
@@ -8,7 +8,9 @@
         %b= b.title
         %br
         - b.reference_list.each do |r|
+          - puts "about to link to a bible path"
           = link_to r, bible_path(r)
+          - puts "done linking to bible path"
         - if b.labels
           %span.separator |
           - b.labels.split(",").each do |l|
