--- a/app/views/shared/_menu_bookmark.html.haml
+++ b/app/views/shared/_menu_bookmark.html.haml
@@ -39,11 +39,9 @@
           %a{:class => "color_picker", :href =>"#"}
           %a{:class => "color_picker_holder", :href =>"#"}
           %a{:class => "color_picker_clear", :href =>"#"}
-            <span class='selected'></span>
           %button{:type => "submit", :name => "highlight[color]", :value => "f3a9a9", :class => "color", :id => "highlight_f3a9a9", :href => "#", :style => "background-color:#f3a9a9"}
-          %a{:class => "color", :id => "highlight_f6f0b4", :href => "#", :style => "background-color:#f6f0b4"}
-          %a{:class => "color", :id => "highlight_a8ed9d", :href => "#", :style => "background-color:#a8ed9d"}
-          %a{:class => "color", :id => "highlight_f3a9a9", :href => "#", :style => "background-color:#f3a9a9"}
+          %button{:type => "submit", :name => "highlight[color]", :value => "f6f0b4", :class => "color", :id => "highlight_f6f0b4", :href => "#", :style => "background-color:#f6f0b4"}
+          %button{:type => "submit", :name => "highlight[color]", :value => "a8ed9d", :class => "color", :id => "highlight_a8ed9d", :href => "#", :style => "background-color:#a8ed9d"}
         %div{:class => "clear"}
     %dt
       Bookmark
