plan preview and various ui tweaks

--- a/app/views/plans/index.html.haml
+++ b/app/views/plans/index.html.haml
@@ -63,11 +63,9 @@
           - @plans.each do |plan|
             %li
               %div
-                %h4= link_to(plan.name, plan)
-                %span.float_right= "| #{plan.formatted_length}"
+                %h4{style: "margin-bottom: 12px"}= link_to(plan.name, plan)
+                %div{style: "margin-bottom: 10px; line-height: 14px"}= plan.formatted_length
                 %p.small= plan.about
-                %br
         = render "shared/pagination", resource_list: @plans
       -else
         .none{align: "center"}= t("plans.none found")
-  
