--- a/app/views/plans/show.html.haml
+++ b/app/views/plans/show.html.haml
@@ -3,10 +3,9 @@
 - content_for :sidebar do
   .widget
     - if current_user.subscribed_to? @plan
-      = button_to(t('plans.read today'), plan_path(@plan), method: "get" , class: 'action_button_green', style: "width: 300px; height: 40px; margin-bottom: 10px")
+      = link_to(t('plans.read today'), plan_path(@plan), class: 'action_button_green', style: "margin-bottom: 10px")
     - else
-      = button_to(t('plans.subscribe to plan'), plan_start_path(@plan), :class => 'action_button_green')
-  
+      = link_to(t('plans.subscribe to plan'), plan_start_path(@plan), :class => 'action_button_green', style: "margin-bottom: 10px")
   .widget
     %header
       %span
@@ -18,7 +17,7 @@
           = @plan.length
       - if !current_user.subscribed_to? @plan
         %li
-          = link_to(t("plans.view sample"), @plan)
+          = link_to(t("plans.view sample"), day: 1.to_s)
       %li
         = link_to(t("plans.users subscribed", user_count: @plan.users.count), plan_users_path(@plan))
   .widget
@@ -28,9 +27,10 @@
     %ul.widget_menu
       %li
         %p= @plan.copyright
-      %li
-        = link_to(t("plans.about publisher"), @plan.publisher_url)
-        -#TODO: view partial for this sidebar plan content
+      - unless @plan.publisher_url.nil?
+        %li
+          = link_to(t("plans.about publisher"), @plan.publisher_url)
+-#TODO: view partial for this sidebar plan content
       
 %article
   -#TODO: put << link back to how we got here
