--- a/app/views/plans/users_index.html.haml
+++ b/app/views/plans/users_index.html.haml
@@ -3,9 +3,9 @@
 - content_for :sidebar do
   .widget
     - if current_user.subscribed_to? @plan
-      = button_to(t('plans.read today'), plan_path(@plan), method: "get" , class: 'action_button_green', style: "width: 300px; height: 40px; margin-bottom: 10px")
+      = link_to(t('plans.read today'), plan_path(@plan), class: 'action_button_green', style: "margin-bottom: 10px")
     - else
-      = button_to(t('plans.subscribe to plan'), plan_start_path(@plan), :class => 'action_button_green', style: "width: 300px; height: 40px; margin-bottom: 10px")  
+      = link_to(t('plans.subscribe to plan'), plan_start_path(@plan), :class => 'action_button_green', style: "margin-bottom: 10px")
   .widget
     %header
       %span
@@ -27,9 +27,10 @@
     %ul.widget_menu
       %li
         %p= @plan.copyright
-      %li
-        = link_to(t("plans.about publisher"), @plan.publisher_url)
-        -#TODO: view partial for this sidebar plan content
+      - unless @plan.publisher_url.nil?
+        %li
+          = link_to(t("plans.about publisher"), @plan.publisher_url)
+          -#TODO: view partial for this sidebar plan content
 %article
   %h2= @plan.name
   %h5= t("users.reading")
