--- a/app/views/plans/show_subscribed.html.haml
+++ b/app/views/plans/show_subscribed.html.haml
@@ -24,7 +24,7 @@
               %li.pagination_previous.float_left
                 - if @day > 1
                   = link_to(t("plans.previous day"),day: @day - 1)
-              %h4.float_left{style: "margin-left: 125px;margin-bottom: 0px; margin-top: 3px;"}= (@subscription.respond_to?(:reading_date) ? @subscription.reading_date(@day) : Date.today + (@day - 1)).strftime('%a %b %-d')
+              %h4.float_left{style: "margin-left: 125px;margin-bottom: 0px; margin-top: 3px;"}= (@subscription.respond_to?(:reading_date) ? @subscription.reading_date(@day) : current_date + (@day - 1)).strftime('%a %b %-d')
               %li.pagination_next.float_right
                 - if @day <= @subscription.total_days - 1
                   = link_to(t("plans.next day"), day: @day + 1)
@@ -58,7 +58,7 @@
               %li.pagination_previous.float_left
                 - if @day > 1
                   = link_to(t("plans.previous day"),day: @day - 1)
-              %h4.float_left{style: "margin-left: 50px;margin-bottom: 0px; margin-top: 3px;"}= (@subscription.respond_to?(:reading_date) ? @subscription.reading_date(@day) : Date.today + (@day - 1)).strftime('%a %b %-d')
+              %h4.float_left{style: "margin-left: 50px;margin-bottom: 0px; margin-top: 3px;"}= (@subscription.respond_to?(:reading_date) ? @subscription.reading_date(@day) : current_date + (@day - 1)).strftime('%a %b %-d')
               %li.pagination_next.float_right
                 - if @day <= @subscription.total_days - 1
                   = link_to(t("plans.next day"), day: @day + 1)
