--- a/app/views/shared/_nav_primary.html.haml
+++ b/app/views/shared/_nav_primary.html.haml
@@ -4,18 +4,17 @@
       %li#nav_primary_bible{class: @nav == :bible ? "highlighted" : ""}
         %a{:href => '/bible'}
           %span=t("bible")
-      - if current_auth
-        %li#nav_primary_bookmarks{class: @nav == :bookmarks ? "highlighted" : ""}
-          %a{:href => user_bookmarks_path(current_auth.username)}
-            %span Bookmarks
+      %li#nav_primary_bookmarks{class: @nav == :bookmarks ? "highlighted" : ""}
+        %a{:href => current_auth ? user_bookmarks_path(current_auth.username) : sign_up_path}
+          %span Bookmarks
       %li#nav_primary_plans
-        %a{:href => user_plans_path(current_auth.username)}
+        %a{:href => current_auth ? user_plans_path(current_auth.username) : plans_path}
           %span=t("plans title")
       %li#nav_primary_notes{class: @nav == :notes ? "highlighted" : ""}
         %a{:href => current_auth ? user_notes_path(current_auth.username) : notes_path}
           %span=t("notes title")
       %li#nav_primary_friends
-        %a{:href => user_friends_path(current_auth.username)}
+        %a{:href => current_auth ? user_friends_path(current_auth.username) : sign_up_path}
           %span=t("friends")
       %li#nav_primary_mobile
         %a{:href => '/mobile'}
