--- a/app/views/users/_create_form.html.haml
+++ b/app/views/users/_create_form.html.haml
@@ -1,3 +1,12 @@
+- content_for :sidebar do
+  .widget
+    %header
+      %span
+        =t("registration.benefits title")
+    %ul.widget_menu
+      %li
+        %p= t("registration.benefits blurb")
+
 = form_for :user, url: sign_up_path do |f|
   - if @user.errors.any?
     .form_errors
