fixed single verse display
Change-Id: I90ad33b4e7eb3dccd188f5d6dff9db3f0548f0ed

--- a/app/assets/sass/_main_reader.sass
+++ b/app/assets/sass/_main_reader.sass
@@ -241,7 +241,10 @@
   height: 0
 
 .verse.selected
-  background: #ff9
+  background: #ddd !important
+
+.verse
+  border-radius: 4px
 
 .verse + .verse
   margin-left: 3px
