added reader updates
Change-Id: I64a77f8609a404bc23653df1e4e126b2432813e2

--- a/app/cells/notes_list_widget/display.html.haml
+++ b/app/cells/notes_list_widget/display.html.haml
@@ -1,5 +1,5 @@
 - unless @notes.empty?
-  %div.widget
+  %div.widget.notes
     %header
       %a.count= @notes.total
       %span.header_icon_note= @title 
