--- a/app/views/shared/_widget_bookmarks.html.haml
+++ b/app/views/shared/_widget_bookmarks.html.haml
@@ -1,4 +1,4 @@
-.widget
+.widget.bookmarks
   %header
     %a.count{href: user_bookmarks_path(current_auth.user_id)}= @bookmarks.total
     %span.header_icon_bookmark= t('recent bookmarks')
