--- a/app/views/shared/_widget_parallel_notes.html.haml
+++ b/app/views/shared/_widget_parallel_notes.html.haml
@@ -1,4 +1,4 @@
-.widget.parallel_notes
+.widget.parallel_notes{style: ("display: none;" if hide_widget)}
   %header
     %span.header_icon_note= t('New Note')
     %a.pop_out_button
