--- a/app/views/shared/_menu_bookmark.html.haml
+++ b/app/views/shared/_menu_bookmark.html.haml
@@ -110,6 +110,6 @@
         %button#copy_link
           Copy
     %a.open_modal{:href => "#"}
-      %dt
+      %dt#new_note_modal
         New Note
 
