it was zeroclipboard's fault
Change-Id: I5017b44d6f80e08fbf093113a42b005941be3267

--- a/app/views/shared/_javascripts.html.haml
+++ b/app/views/shared/_javascripts.html.haml
@@ -6,8 +6,8 @@
 / %script{:src => '/javascripts/analytics.js'}
 / %script{:src => '/javascripts/uservoice.js'}
 %script{:src => '/javascripts/color_picker/colorpicker.js'}
-%script{:src => '/javascripts/ZeroClipboard.js'}
-/ %script{:src => '/javascripts/charCount.js'}
+/ %script{:src => '/javascripts/ZeroClipboard.js'}
+%script{:src => '/javascripts/charCount.js'}
 
 
 - if content_for? :javascripts
