--- a/app/views/shared/_javascripts.html.haml
+++ b/app/views/shared/_javascripts.html.haml
@@ -3,11 +3,11 @@
 %script{:src => '/javascripts/application.js'}
 %script{:src => '/javascripts/rails.js'}
 / %script{:src => 'http://include.reinvigorate.net/re_.js'}
-/ %script{:src => '/javascripts/analytics.js'}
-/ %script{:src => '/javascripts/uservoice.js'}
+%script{:src => '/javascripts/analytics.js'}
+%script{:src => '/javascripts/uservoice.js'}
 %script{:src => '/javascripts/color_picker/colorpicker.js'}
 %script{:src => '/javascripts/ZeroClipboard.js'}
-/ %script{:src => '/javascripts/charCount.js'}
+%script{:src => '/javascripts/charCount.js'}
 
 
 - if content_for? :javascripts
